--- a/index.html
+++ b/index.html
@@ -7533,8 +7533,8 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Aligned/Lambdaclass-zkVMs-benchmarks">Aligned/Lambdaclass zkVMs benchmarks<a class="anchor-link" href="#Aligned/Lambdaclass-zkVMs-benchmarks">¶</a></h1><h2 id="Benchmarks-of-VM-proving-times-made-by-Aligned-and-Lambdaclass">Benchmarks of VM proving times made by Aligned and Lambdaclass<a class="anchor-link" href="#Benchmarks-of-VM-proving-times-made-by-Aligned-and-Lambdaclass">¶</a></h2><p>These benchmarks aim to provide a neutral suite for measuring the efficiency of zkVMs.</p>
-<p>You can run this Python notebook yourself to create new plots or analyze the data</p>
-<p>Raw results can be found in <a href="https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results">here</a></p>
+<p>You can run this Python notebook yourself to create new plots or analyze the data.</p>
+<p>Raw results can be found <a href="https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results">here</a>.</p>
 </div>
 </div>
 </div>
