--- a/index.html
+++ b/index.html
@@ -7705,7 +7705,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="GPU-Benchmarks-on-RTX-A6000">GPU Benchmarks on RTX A6000<a class="anchor-link" href="#GPU-Benchmarks-on-RTX-A6000">¶</a></h2><p>The data was collected on a server with the following specs:</p>
 <ul>
-<li>GPU: NVIDIA RTX A6000</li>
+<li>GPU: NVIDIA RTX A6000 (48GB)</li>
 <li>RAM: 44GB</li>
 <li>OS: Ubuntu 22 LTS</li>
 </ul>
