--- a/index.html
+++ b/index.html
@@ -7534,6 +7534,7 @@ a.anchor-link {
 <h1 id="Aligned/Lambdaclass-zkVMs-benchmarks">Aligned/Lambdaclass zkVMs benchmarks<a class="anchor-link" href="#Aligned/Lambdaclass-zkVMs-benchmarks">¶</a></h1><h2 id="Benchmarks-of-VM-proving-times-made-by-Aligned-and-Lambdaclass">Benchmarks of VM proving times made by Aligned and Lambdaclass<a class="anchor-link" href="#Benchmarks-of-VM-proving-times-made-by-Aligned-and-Lambdaclass">¶</a></h2><p>These benchmarks aim to provide a neutral suite for measuring the efficiency of zkVMs.</p>
 <p>You can run this Python notebook yourself to create new plots or analyze the data.</p>
 <p>Raw results can be found <a href="https://github.com/yetanotherco/zkvm_benchmarks/tree/main/bench_results">here</a>.</p>
+<p>The full Jupyter notebook can be found <a href="https://github.com/yetanotherco/zkvm_benchmarks/blob/reth_bench_test/benchmark.ipynb">here</a>.</p>
 </div>
 </div>
 </div>
@@ -7561,7 +7562,6 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Fibonacci-Benchmark">Fibonacci Benchmark<a class="anchor-link" href="#Fibonacci-Benchmark">¶</a></h3><p>In this section we will analyze the performance of Fibonacci for different provers.</p>
-<p>The data was loaded from <code>bench_results/fibo_6_mar_25_A6000.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -7571,7 +7571,7 @@ a.anchor-link {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4>
+<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4><p>The data was loaded from <code>bench_results/fibo_6_mar_25_A6000.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -7718,7 +7718,6 @@ Data sorted by Prover and N for validation:
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Keccak-Benchmark">Keccak Benchmark<a class="anchor-link" href="#Keccak-Benchmark">¶</a></h3><p>In this section we will analyze the performance of Keccak for different provers.</p>
-<p>The data was loaded from <code>bench_results/keccak_6_mar_25_A6000.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -7728,7 +7727,7 @@ Data sorted by Prover and N for validation:
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4>
+<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4><p>The data was loaded from <code>bench_results/keccak_6_mar_25_A6000.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -7885,7 +7884,7 @@ KiB hased per second at max sample
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Time-used-at-10M-and-100M-bytes">Time used at 10M and 100M bytes<a class="anchor-link" href="#Time-used-at-10M-and-100M-bytes">¶</a></h4>
+<h5 id="Time-used-at-10M-and-100M-bytes">Time used at 10M and 100M bytes<a class="anchor-link" href="#Time-used-at-10M-and-100M-bytes">¶</a></h5>
 </div>
 </div>
 </div>
@@ -8010,7 +8009,6 @@ KiB hased per second at max sample
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Fibonacci-Benchmark">Fibonacci Benchmark<a class="anchor-link" href="#Fibonacci-Benchmark">¶</a></h3><p>In this section we will analyze the performance of Fibonacci for different provers.</p>
-<p>The data was loaded from <code>bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -8020,7 +8018,7 @@ KiB hased per second at max sample
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4>
+<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4><p>The data was loaded from <code>bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -8177,7 +8175,6 @@ Data sorted by Prover and N for validation:
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Keccak-Benchmark">Keccak Benchmark<a class="anchor-link" href="#Keccak-Benchmark">¶</a></h3><p>In this section we will analyze the performance of Keccak for different provers.</p>
-<p>The data was loaded from <code>bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -8187,7 +8184,7 @@ Data sorted by Prover and N for validation:
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4>
+<h4 id="Load-the-data">Load the data<a class="anchor-link" href="#Load-the-data">¶</a></h4><p>The data was loaded from <code>bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv</code>.</p>
 </div>
 </div>
 </div>
@@ -8351,7 +8348,7 @@ KiB hased per second at max sample
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h4 id="Time-used-at-100K-bytes-and-10M-bytes">Time used at 100K bytes and 10M bytes<a class="anchor-link" href="#Time-used-at-100K-bytes-and-10M-bytes">¶</a></h4>
+<h5 id="Time-used-at-100K-bytes-and-10M-bytes">Time used at 100K bytes and 10M bytes<a class="anchor-link" href="#Time-used-at-100K-bytes-and-10M-bytes">¶</a></h5>
 </div>
 </div>
 </div>
