add examples status

--- a/index.html
+++ b/index.html
@@ -7534,9 +7534,9 @@ a.anchor-link {
 <h1 id="Benchmarks-of-VM-proving-times-made-by-Aligned">Benchmarks of VM proving times made by Aligned<a class="anchor-link" href="#Benchmarks-of-VM-proving-times-made-by-Aligned">¶</a></h1><h2 id="About">About<a class="anchor-link" href="#About">¶</a></h2><p>These benchmarks aim to provide a neutral suite for measuring the efficiency of zkVMs.</p>
 <p>The benchmarks test the following programs:</p>
 <ul>
-<li>Fibonacci</li>
-<li>Keccak</li>
-<li><a href="https://github.com/succinctlabs/rsp">RSP (Reth Succinct Processor)</a></li>
+<li>✅ Fibonacci</li>
+<li>✅ Keccak</li>
+<li>🏗️ <a href="https://github.com/succinctlabs/rsp">RSP (Reth Succinct Processor)</a></li>
 </ul>
 <p>The benchmarks are run on the following zkVMs:</p>
 <ul>
