update rsp status

--- a/index.html
+++ b/index.html
@@ -7569,7 +7569,7 @@ a.anchor-link {
 <ul>
 <li>✅ Fibonacci</li>
 <li>✅ Keccak</li>
-<li>🏗️ <a href="https://github.com/succinctlabs/rsp">RSP (Reth Succinct Processor)</a></li>
+<li>️✅ <a href="https://github.com/succinctlabs/rsp">RSP (Reth Succinct Processor)</a></li>
 </ul>
 <p>The benchmarks are run on the following zkVMs:</p>
 <ul>
